2005-11-18  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el: (org-table-sort-lines): New command.
	(org-tbl-menu): Add entry for `org-table-sort-lines'.
	(org-add-file): Command removed, use `org-agenda-file-to-front'
	instead.
	(org-export-icalendar): Use `org-icalendar-combined-name'.
	(org-cycle-agenda-files, org-agenda-file-to-end)
	(org-agenda-file-to-front): New commands.
	(org-table-tab-jumps-over-hlines,org-export-html-style): New
	options.
	(org-table-next-field): Use `org-table-tab-jumps-over-hlines'.
	(org-at-table.el-p, org-set-autofill-regexps,org-html-protect):
	New functions.
	(org-fill-paragraph): Call `org-table-align' in tables.
	(org-mode): Call `org-set-autofill-regexps'.
	(org-export-as-html): Support for local handformatted lists.
	Modified to produce valid HTML 4.0. Use `org-export-html-style'.
	(org-export-local-list-max-depth): New option.
	(org-html-expand): Use `org-html-protect'.

2005-11-18  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-install-speedbar-variables): Bind gud-pp
	to "p".
	(gdb): Move definition of gud-pp to...

	* progmodes/gdb-ui.el (gdb-ann3): ...here.  Make it work in the
	speedbar.
	(gdb-find-watch-expression): New function.
	
2005-11-17  Chong Yidong  <cyd@stupidchicken.com>

	* faces.el (face-attribute, set-face-attribute): Mention existence
	of `:ignore-defface' setting in docstring.

2005-11-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (completion-setup-function): Fix last change.

2005-11-17  John Paul Wallington  <jpw@pobox.com>

	* ibuf-ext.el (ibuffer-interactive-filter-by-mode):
	Use `posn-set-point' instead of `mouse-set-point' because the
	latter is not fbound when configured without X.

	* comint.el (comint-insert-input): Likewise.

2005-11-17  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (hard-newline): New variable.
	(sendmail-user-agent-compose, next-line): Use it.

	* mail/sendmail.el (mail-setup, mail-send, mail-insert-from-field)